--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ prefs.js
 revocations.txt
 saved-telemetry-pings
 search.json.mozlz4
+sessionbackups
 secmod.db
 sessionCheckpoints.json
 sessionstore-backups
@@ -61,3 +62,5 @@ xulstore.json
 notificationstore.json
 serviceworker.txt
 sessionstore.js
+containers.json
+session.rdf
