--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,13 @@ AddonInstaller
 addons.json
 autoproxy
 blocklist.xml
+blocklist-addons.json
+blocklist-gfx.json
+blocklist-plugins.json
 bookmarkbackups
 cert8.db
 compatibility.ini
+containers.json
 content-prefs.sqlite
 cookies.sqlite
 cookies.sqlite-shm
@@ -27,6 +31,7 @@ gmp-gmpopenh264
 gmp-widevinecdm
 gm_scripts
 key3.db
+kinto.sqlite
 localstore.rdf
 logins.json
 mimeTypes.rdf
@@ -43,10 +48,12 @@ prefs.js
 revocations.txt
 saved-telemetry-pings
 search.json.mozlz4
+session.rdf
 sessionbackups
 secmod.db
 sessionCheckpoints.json
 sessionstore-backups
+sessionstore.js
 signedInUser.json
 SiteSecurityServiceState.txt
 storage
@@ -61,6 +68,3 @@ xulstore.json
 .parentlock
 notificationstore.json
 serviceworker.txt
-sessionstore.js
-containers.json
-session.rdf
