add gitignore files update stylish.sqlite

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,8 @@ extensions.json
 experiments.json
 favicons.sqlite
 features
+favicons.sqlite-shm
+favicons.sqlite-wal
 fftmp
 formhistory.sqlite
 foxyproxy.xml
